--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "gpt-3-encoder": "^1.1.3",
+    "mqtt": "^4.3.7",
     "opencc-js": "^1.0.5"
   },
   "devDependencies": {
